fixing sidebar margins for widgets that are wrapped by <p> and <div> - only worked for <ul> before - closes #86

--- a/assets/sass/components/_body.scss
+++ b/assets/sass/components/_body.scss
@@ -227,7 +227,7 @@ html body {
 					background-color:  rgba(0, 0, 0, .30);
 					line-height: 1.6;
 				} 
-				ul {
+				ul, p, div {
 					margin-left: 10px;
 					margin-right: 40px;
 				}
